tests/error/06.program
{
    string_s = "0123456789";
    string_s[42 - 100] = "8";
}